// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderFooter/> render() should render 1`] = `
<Container
  className="container"
  fluid={true}
  tag="div"
>
  <Row
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Col
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xl={
        Object {
          "order": 1,
          "size": 7,
        }
      }
      xs={
        Object {
          "order": 2,
          "size": 12,
        }
      }
    >
      <Row
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Col
          lg={6}
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
          xs={12}
        >
          <FormGroup
            tag="div"
          >
            <Label
              for="amount"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Refund with: Manual
            </Label>
            <AmountInput
              className="amountInput"
              currencyCode="USD"
              disabled={false}
              id="amount"
              max={1.2}
              min={0}
              onChange={[Function]}
              required={true}
              saveInputRef={[Function]}
              symbol={null}
              value="1.00"
            />
          </FormGroup>
        </Col>
        <Col
          lg={6}
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
          xs={12}
        >
          <FormGroup
            tag="div"
          >
            <Label
              for="reason"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Reason for canceling this order
            </Label>
            <Input
              id="reason"
              onChange={[MockFunction]}
              type="select"
              value="customer"
            >
              <option
                value="customer"
              >
                Customer changed/canceled order
              </option>
              <option
                value="fraud"
              >
                Fraudulent order
              </option>
              <option
                value="inventory"
              >
                Items unavailable
              </option>
              <option
                value="declined"
              >
                Payment declined
              </option>
              <option
                value="other"
              >
                Other
              </option>
            </Input>
          </FormGroup>
        </Col>
      </Row>
      <Row
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Col
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
          xs={12}
        >
          <FormGroup
            tag="div"
          >
            <Label
              for="discrepancy-reason"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Reason for custom refund amount
            </Label>
            <Input
              className="discrepancyReasonInput"
              id="discrepancy-reason"
              onChange={[Function]}
              type="select"
              value="other"
            >
              <option
                value="restock"
              >
                Restocking fee
              </option>
              <option
                value="damage"
              >
                Damaged goods
              </option>
              <option
                value="customer"
              >
                Customer satisfaction
              </option>
              <option
                value="other"
              >
                Other
              </option>
            </Input>
            <FormText
              color="muted"
              tag="small"
            >
              The amount being refunded is different from the value of items being returned.
            </FormText>
          </FormGroup>
          <FormGroup
            check={true}
            className="mb-3"
            tag="div"
          >
            <Label
              check={true}
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <Input
                checked={true}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              <span
                className="ml-1"
              >
                Restock items
              </span>
            </Label>
            <FormText
              color="muted"
              tag="small"
            >
              The claimed quantity for products in this order will be restocked back to your store.
            </FormText>
          </FormGroup>
          <FormGroup
            check={true}
            className="mb-3"
            tag="div"
          >
            <Label
              check={true}
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <Input
                checked={true}
                onChange={[MockFunction]}
                type="checkbox"
              />
              <span
                className="ml-1"
              >
                Send notification to customer
              </span>
            </Label>
          </FormGroup>
        </Col>
      </Row>
    </Col>
    <Col
      className="mb-sm-4"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xl={
        Object {
          "order": 2,
          "size": 5,
        }
      }
      xs={
        Object {
          "order": 1,
          "size": 12,
        }
      }
    >
      <OrderTotals
        currencyCode="USD"
        editable={true}
        hasShippingLine={true}
        loading={false}
        onPayloadChange={[MockFunction]}
        payload={
          Immutable.Map {
            "currency": "USD",
            "restock": true,
            "notify": true,
            "refund_line_items": Immutable.List [
              Immutable.Map {
                "line_item_id": 4193100136471,
                "restock_type": "cancel",
                "fulfillment_status": null,
                "quantity": 1,
              },
            ],
            "shipping": Immutable.Map {
              "amount": "0.00",
            },
            "transactions": Immutable.List [
              Immutable.Map {
                "amount": "1.00",
              },
            ],
          }
        }
        refund={
          Immutable.Map {
            "shipping": Immutable.Map {
              "amount": "0.00",
              "tax": "0.00",
              "maximum_refundable": "0.00",
            },
            "refund_line_items": Immutable.List [
              Immutable.Map {
                "subtotal": "1.00",
                "location_id": 123,
                "price": "1.00",
                "discounted_price": "1.00",
                "quantity": 1,
                "discounted_total_price": "1.00",
                "total_tax": "0.20",
                "total_cart_discount_amount": "0.00",
                "restock_type": "no_restock",
                "line_item_id": 4193100136471,
              },
            ],
            "transactions": Immutable.List [
              Immutable.Map {
                "order_id": 1894175539223,
                "kind": "suggested_refund",
                "gateway": "manual",
                "parent_id": 2521452118039,
                "amount": "1.20",
                "currency": "USD",
                "maximum_refundable": "1.20",
              },
            ],
            "currency": "USD",
          }
        }
      />
    </Col>
  </Row>
</Container>
`;

exports[`<OrderFooter/> render() should render for refund order action 1`] = `
<Container
  className="container"
  fluid={true}
  tag="div"
>
  <Row
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Col
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xl={
        Object {
          "order": 1,
          "size": 7,
        }
      }
      xs={
        Object {
          "order": 2,
          "size": 12,
        }
      }
    >
      <Row
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Col
          lg={6}
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
          xs={12}
        >
          <FormGroup
            tag="div"
          >
            <Label
              for="amount"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Refund with: Manual
            </Label>
            <AmountInput
              className="amountInput"
              currencyCode="USD"
              disabled={false}
              id="amount"
              max={1.2}
              min={0}
              onChange={[Function]}
              required={true}
              saveInputRef={[Function]}
              symbol={null}
              value="1.00"
            />
          </FormGroup>
        </Col>
        <Col
          lg={6}
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
          xs={12}
        >
          <FormGroup
            tag="div"
          >
            <Label
              for="reason"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Reason for refund
            </Label>
            <Input
              id="reason"
              onChange={[MockFunction]}
              type="text"
              value=""
            />
            <FormText
              color="muted"
              tag="small"
            >
              Only you and other staff can see this reason.
            </FormText>
          </FormGroup>
        </Col>
      </Row>
      <Row
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Col
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
          xs={12}
        >
          <FormGroup
            tag="div"
          >
            <Label
              for="discrepancy-reason"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Reason for custom refund amount
            </Label>
            <Input
              className="discrepancyReasonInput"
              id="discrepancy-reason"
              onChange={[Function]}
              type="select"
              value="other"
            >
              <option
                value="restock"
              >
                Restocking fee
              </option>
              <option
                value="damage"
              >
                Damaged goods
              </option>
              <option
                value="customer"
              >
                Customer satisfaction
              </option>
              <option
                value="other"
              >
                Other
              </option>
            </Input>
            <FormText
              color="muted"
              tag="small"
            >
              The amount being refunded is different from the value of items being returned.
            </FormText>
          </FormGroup>
          <FormGroup
            check={true}
            className="mb-3"
            tag="div"
          >
            <Label
              check={true}
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <Input
                checked={true}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
              <span
                className="ml-1"
              >
                Restock items
              </span>
            </Label>
            <FormText
              color="muted"
              tag="small"
            >
              The claimed quantity for products in this order will be restocked back to your store.
            </FormText>
          </FormGroup>
          <FormGroup
            check={true}
            className="mb-3"
            tag="div"
          >
            <Label
              check={true}
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <Input
                checked={true}
                onChange={[MockFunction]}
                type="checkbox"
              />
              <span
                className="ml-1"
              >
                Send notification to customer
              </span>
            </Label>
          </FormGroup>
        </Col>
      </Row>
    </Col>
    <Col
      className="mb-sm-4"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xl={
        Object {
          "order": 2,
          "size": 5,
        }
      }
      xs={
        Object {
          "order": 1,
          "size": 12,
        }
      }
    >
      <OrderTotals
        currencyCode="USD"
        editable={true}
        hasShippingLine={true}
        loading={false}
        onPayloadChange={[MockFunction]}
        payload={
          Immutable.Map {
            "currency": "USD",
            "restock": true,
            "notify": true,
            "refund_line_items": Immutable.List [
              Immutable.Map {
                "line_item_id": 4193100136471,
                "restock_type": "cancel",
                "fulfillment_status": null,
                "quantity": 1,
              },
            ],
            "shipping": Immutable.Map {
              "amount": "0.00",
            },
            "transactions": Immutable.List [
              Immutable.Map {
                "amount": "1.00",
              },
            ],
          }
        }
        refund={
          Immutable.Map {
            "shipping": Immutable.Map {
              "amount": "0.00",
              "tax": "0.00",
              "maximum_refundable": "0.00",
            },
            "refund_line_items": Immutable.List [
              Immutable.Map {
                "subtotal": "1.00",
                "location_id": 123,
                "price": "1.00",
                "discounted_price": "1.00",
                "quantity": 1,
                "discounted_total_price": "1.00",
                "total_tax": "0.20",
                "total_cart_discount_amount": "0.00",
                "restock_type": "no_restock",
                "line_item_id": 4193100136471,
              },
            ],
            "transactions": Immutable.List [
              Immutable.Map {
                "order_id": 1894175539223,
                "kind": "suggested_refund",
                "gateway": "manual",
                "parent_id": 2521452118039,
                "amount": "1.20",
                "currency": "USD",
                "maximum_refundable": "1.20",
              },
            ],
            "currency": "USD",
          }
        }
      />
    </Col>
  </Row>
</Container>
`;
